--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,26 +5,44 @@
   src: url("../../assets/fonts/KGCorneroftheSky.ttf") format('truetype');
 }
 
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-track {
+    outline: white;
+    background-color: white;
+    border: solid 1px #1E2732;
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #1E2732;
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #1E2732;
+}
+
 html {
   background: #15202B;
   font-family: nica;
 }
 
 .container {
-  display: flex;
+  display: grid;
   justify-content: center;
   color: white;
 }
 
 .card {
-  display: inline-block;
   position: relative;
-  width: 40vw;
+  width: 100%;
+  margin: 5%;
   background-color: #1E2732;
   border: solid 1px white;
   border-radius: 10px;
-  padding: 1vw;
-  margin: 5%;
   text-align: center;
   overflow: hidden;
   box-shadow: 0 0 10px white;
@@ -32,9 +50,10 @@ html {
 }
 
 #avatar {
+  margin: 10px;
   width: 100px;
   height: 100px;
-  border: solid;
+  border: solid 3px white;
   border-radius: 60px;
 }
 
@@ -45,20 +64,19 @@ img {
 .repos {
   display: inline-block;
   position: relative;
-  width: 30%;
+  width: 190px;
   background-color: #1E2732;
   border: solid 1px white;
   border-radius: 10px;
-  padding: 3.2vw;
-  margin: 5px;
-  overflow: hidden;
+  padding: 8%;
+  margin: 1%;
+  overflow: auto;
 }
 
 .repos p {
   position: absolute;
   top: 0;
   text-align: left;
-  font-size: 100%;
 }
 
 .repos img {
