--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,23 +6,23 @@
 }
 
 ::-webkit-scrollbar {
-    width: 10px;
+  width: 10px;
 }
 
 ::-webkit-scrollbar-track {
-    outline: white;
-    background-color: white;
-    border: solid 1px #1E2732;
-    border-radius: 10px;
+  outline: white;
+  background-color: white;
+  border: solid 1px #1E2732;
+  border-radius: 10px;
 }
 
 ::-webkit-scrollbar-thumb {
-    background: #1E2732;
-    border-radius: 10px;
+  background: #1E2732;
+  border-radius: 10px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    background: #1E2732;
+  background: #1E2732;
 }
 
 html {
@@ -38,8 +38,8 @@ html {
 
 .card {
   position: relative;
-  width: 100%;
-  margin: 5%;
+  width: 90%;
+  top: 8%;
   background-color: #1E2732;
   border: solid 1px white;
   border-radius: 10px;
@@ -47,6 +47,7 @@ html {
   overflow: hidden;
   box-shadow: 0 0 10px white;
   font-size: 12px;
+  margin: 5%;
 }
 
 #avatar {
@@ -64,13 +65,14 @@ img {
 .repos {
   display: inline-block;
   position: relative;
-  width: 190px;
+  width: 170px;
   background-color: #1E2732;
   border: solid 1px white;
   border-radius: 10px;
   padding: 8%;
   margin: 1%;
   overflow: auto;
+  font-size: 10px;
 }
 
 .repos p {
